feat: :sparkles: agregar seguimiento de rama git en el rastreador de actividad

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
   "cSpell.language": "en,es",
+  "cSpell.ignoreRegExpList": [
+    ".gitignore",
+    "package-lock.json",
+  ],
   "cSpell.words": [
     "devtimer",
     "Reintentar"
