feat: :sparkles: agregar funcionalidad para configurar y verificar API Key en DevTimer

--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
       {
         "command": "devtimer.showReport",
         "title": "DevTimer: Mostrar reporte"
+      },
+      {
+        "command": "devtimer.configApiKey",
+        "title": "DevTimer: Configurar API Key"
       }
     ],
     "viewsContainers": {
