--- a/package.json
+++ b/package.json
@@ -75,5 +75,6 @@
     "@typescript-eslint/parser": "^8.26.0",
     "eslint": "^9.21.0",
     "typescript": "^5.8.2"
-  }
+  },
+  "dependencies": {}
 }
