feat: :sparkles: agregar funcionalidad para configurar y guardar API Key desde la extensión

--- a/package.json
+++ b/package.json
@@ -76,5 +76,7 @@
     "eslint": "^9.21.0",
     "typescript": "^5.8.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "open": "^8.4.2"
+  }
 }
