feat: :sparkles: agregar manejador de URI para configurar apiKey desde la extensión

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,10 @@
   ],
   "cSpell.words": [
     "bloqueante",
+    "configurate",
+    "configúrela",
     "devtimer",
+    "manejador",
     "Reintentar"
   ]
 }
