feat: :sparkles: reestructurar la configuración de Webpack y separar la configuración de desarrollo y producción

--- a/react-app/package.json
+++ b/react-app/package.json
@@ -5,11 +5,15 @@
   "scripts": {
     "clean": "rimraf dist",
     "clean:src": "node clean-js-files.js",
+
     "prebuild": "npm run clean && npm run clean:src",
-    "build": "npm run prebuild && webpack --mode production --config webpack.config.js && npm run clean:src",
+    "build": "NODE_ENV=production webpack --mode production --config webpack.config.js && npm run clean:src",
+
     "predev": "npm run clean && npm run clean:src",
-    "dev": "webpack --mode development --watch --config webpack.config.js",
-    "start": "webpack serve --config webpack.dev.js"
+    "dev": "NODE_ENV=production webpack --mode development --watch --config webpack.config.js",
+
+    "prestart": "npm run clean",
+    "start": "NODE_ENV=development webpack serve --config webpack.dev.js"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -29,6 +33,6 @@
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.2"
+    "webpack-dev-server": "^4.15.1"
   }
 }
