--- a/react-app/tsconfig.json
+++ b/react-app/tsconfig.json
@@ -7,25 +7,35 @@
       "dom",
       "es2015",
       "es2016",
-      "es2017"
+      "es2017",
     ],
     "jsx": "react",
     "sourceMap": true,
     "outDir": "./dist/tsc-out",
-    "rootDir": "./src",
+    "rootDir": ".",
     "noEmitOnError": true,
     "strict": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "baseUrl": ".",
+    "paths": {
+      "src/*": [
+        "src/*"
+      ],
+      "dev/*": [
+        "dev/*"
+      ]
+    }
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "dev/**/*",
   ],
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
   ]
 }
