feat: :sparkles: añadir capturas de pantalla diarias y semanales, actualizar configuración de VSCode y crear archivo CHANGELOG

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
     "package-lock.json",
   ],
   "cSpell.words": [
+    "anonimizados",
     "bloqueante",
+    "configurarla",
     "configurate",
     "configúrela",
     "devtimer",
@@ -16,6 +18,7 @@
     "Monitoreo",
     "Reintentar",
     "renderizar",
+    "timecoder",
     "travis",
     "webp"
   ]
