feat: :sparkles: renombrar el paquete a "time-coder", añadir información de precios en package.json, actualizar la URL base de la API y eliminar la exclusión de la carpeta resources en .vscodeignore

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "timecoder",
+  "name": "time-coder",
   "displayName": "TimeCoder",
   "homepage": "https://timecoder.dev",
+  "pricing": "Free",
   "maintainers": [
     {
       "name": "Julian Lasso",
