feat: :sparkles: actualizar el nombre de "TimeCoder" a "TimeCoder!" en varios archivos y ajustar la configuración de la API Key

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "time-coder",
-  "displayName": "TimeCoder",
+  "displayName": "TimeCoder!",
   "homepage": "https://timecoder.dev",
   "pricing": "Free",
   "maintainers": [
