--- a/package.json
+++ b/package.json
@@ -36,18 +36,18 @@
   "contributes": {
     "commands": [
       {
-        "command": "time-coder.showReport",
+        "command": "timecoder.showReport",
         "title": "TimeCoder: Mostrar reporte"
       },
       {
-        "command": "time-coder.configApiKey",
+        "command": "timecoder.configApiKey",
         "title": "TimeCoder: Configurar API Key"
       }
     ],
     "viewsContainers": {
       "activitybar": [
         {
-          "id": "time-coder-sidebar",
+          "id": "timecoder-sidebar",
           "title": "TimeCoder!",
           "icon": "resources/icon.svg"
         }
@@ -66,7 +66,7 @@
     "configuration": {
       "title": "TimeCoder!",
       "properties": {
-        "time-coder.apiKey": {
+        "timecoder.apiKey": {
           "type": "string",
           "default": "",
           "description": "Clave API para autenticación"
